# fastapi-terraform-gke-example

./: .dockerignore  .gitignore  Makefile  README.md  cloudbuild-ci.yaml  cloudbuild.yaml  pyproject.toml  pytest.ini
alembic/: env.py
docker/: backend.dev.dockerfile  backend.dockerfile
docker/compose/: .env.tpl  docker-compose.dev.yml  docker-compose.yml
docker/config/: supervisord.conf  supervisord.conf-dev
kubernetes/: .helmignore  Chart.yaml  secrets.txt.tpl  tiller.yaml  values.yaml
kubernetes/templates/: configMap.yaml  deployment.yaml  ingress.yaml  managedCertificate.yaml  secrets.yaml.tpl  service.yaml
src/: backend_pre_start.py  config.py  dev.py  initial_data.py  main.py  tests_pre_start.py  utils.py  worker.py
src/adapters/: init_db.py  orm.py  session.py
src/adapters/repository/: item.py  user.py
src/api/: deps.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: basic_utils.py  items.py  login.py  users.py  utils.py
src/domain/: item.py  user.py
src/services/: item.py  security.py  unit_of_work.py  user.py
terraform/: main.tf  providers.tf  terraform.tf  variables.auto.tfvars.tpl  variables.tf
tests/: conftest.py  session.py  test.env
tests/e2e_sqlite/api/api_v1/: _test_celery.py  test_items.py  test_login.py  test_users.py
tests/integration/: test_item_service.py  test_user_service.py
tests/utils/: item.py  user.py  utils.py
